# tiny-zip

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
tests/: CMakeLists.txt  ZipFile-tests.cpp
tests/tests-data/: simple-data.txt
tiny-zip/: CMakeLists.txt  tiny-zip.cpp  tiny-zip.h
tiny-zip/include/: Bitstream.hpp  Packed.hpp  Zip.hpp  ZipEntry.hpp  ZipFile.hpp
tiny-zip/src/: ZipEntry.cpp  ZipFile.cpp
